--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="display-table">
 				<div class="display-table-cell">
 					
-					<h1 class="title"><b>Comming Soon</b></h1>
+					<h1 class="title"><b>Coming Soon</b></h1>
 					<br>
 					<h2 class="title"><b>Rcart</b></h2>
 					<p class="desc font-white">Our website is currently undergoing scheduled maintenance.
